Overflow problem, create too long. Needs fixing

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,28 @@ img {
   position:absolute;
 }
 
+.study_img {
+  border: 2px solid #008B8B;
+  width:609px;
+  height:420px;
+  border-radius: 3px;
+}
+
+.trans {
+  border: 2px solid #008B8B;
+  width:609px;
+  height:70px;
+  line-height: 70px;
+  margin: 0 auto;
+  position: relative;
+  text-align: center;
+  border-radius: 3px;
+  margin: 20px auto;
+  font-size: 30px;
+  color: #2F4F4F;
+  background-color: rgba(0,0,0,0.1);
+}
+
 .button, .input, #sender {
   padding: 10px;
   display: block;
